fix(custom-command-tool): hashbang 넣기

--- a/packages/foo/package.json
+++ b/packages/foo/package.json
@@ -22,8 +22,7 @@
   },
   "scripts": {
     "prepack": "yarn build",
-    "typecheck": "tsc --noEmit",
-    "build": "tsup ./src/index.ts --format cjs,esm"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^18",
