--- a/packages/custom-command-tool/package.json
+++ b/packages/custom-command-tool/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "prepack": "yarn build",
     "typecheck": "tsc --noEmit",
-    "build": "tsup ./src/index.ts --format cjs,esm"
+    "build": "tsup ./src/index.ts --format cjs,esm && bash ./src/scripts/replace-hashbang.sh"
   },
   "devDependencies": {
     "@types/node": "^18",
